--- a/style.css
+++ b/style.css
@@ -1075,8 +1075,11 @@ button[data-message="message"]:active {
         --sidebar-width: calc(200px + 1vw);
     } */
     div#dash-container {
+        width: 100vw;
         height: 100vh;
-        overflow: hidden;
+        /* overflow: hidden; */
+        position: fixed;
+        background-color: var(--background);
     }
 
 
@@ -1397,8 +1400,8 @@ button[data-message="message"]:active {
 
     div#projects-grid {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        grid-template-rows: 250px;
-        grid-auto-rows: 250px;
+        grid-template-rows: minmax(250px, 400px);
+        grid-auto-rows:  minmax(250px, 400px);
         width: 98%;
         overflow-y: auto;
     }
@@ -1458,9 +1461,4 @@ button[data-message="message"]:active {
         border-radius: 10px;
     }
     
-}
-
-
-body::content {
-    background-color: var(--background);
 }
